# healthcare-ai

./: .gitignore  README.md  sample_conversation_1.json
back-end/: Dockerfile
back-end/healthcare/: README.md  crewai_flow.html  pyproject.toml  requirements.txt
back-end/healthcare/app/: base.py  main.py
back-end/healthcare/db/: chroma.sqlite3
back-end/healthcare/knowledge/: appointments.csv  doctor.csv  doctor_timeslot.csv  medical_condition.csv  patient.csv
back-end/healthcare/knowledge/archive/: appointments.csv  doctor.csv  doctor_timeslot.csv
back-end/healthcare/src/healthcare/: main.py
back-end/healthcare/src/healthcare/crews/admin_crew/: admin_crew.py
back-end/healthcare/src/healthcare/crews/admin_crew/config/: agents.yaml  tasks.yaml
back-end/healthcare/src/healthcare/crews/medical_crew/: medical_crew.py
back-end/healthcare/src/healthcare/crews/medical_crew/config/: agents.yaml  tasks.yaml
back-end/healthcare/src/healthcare/flows/: flow.py
back-end/healthcare/src/healthcare/tests/: test_watsonx.py
back-end/healthcare/src/healthcare/tools/: custom_tool.py
front-end/: package-lock.json  package.json
front-end/src/: App.jsx  index.css
front-end/src/components/: AboutSection.jsx  MainPage.jsx  Navbar.jsx
front-end/src/styles/: AboutSection.css  MainPage.css  Navbar.css
